external-crates/move/crates/move-compiler/tests/move_2024/parser/global_access_pack_invalid.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_2024/parser/global_access_pack_invalid.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/global_access_pack_invalid.move:3:11
  │
3 │         ::S { }
  │           ^ Expected '::' after the address in this module access chain
  │
  = Access chains that start with '::' must be one of the following forms: 
      '::<address>::<module>', '::<address>::<module>::<member>'

